--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "keyboard>=0.13.5",
+    "openai>=2.15.0",
+    "pyperclip>=1.11.0",
+    "python-dotenv>=1.2.1",
+]
